Style tweaks for post lists and lists of content boxes

--- a/scss/_dark-mode-colors.scss
+++ b/scss/_dark-mode-colors.scss
@@ -1,4 +1,4 @@
-$text-black: #ffffff; // Text for light mode.
+$text: #ffffff; // Text for dark mode.
 
 $background-grey: black; // Page background
 $lightest-grey: #f3f3f3; // Form input backgrounds
