--- a/views/partials/communitysidebar.handlebars
+++ b/views/partials/communitysidebar.handlebars
@@ -3,7 +3,7 @@
 </div>
 
 <h3 class="page-header community-name">
-  <a href="/community/{{communityData.slug}}" class="text-dark">{{ communityData.name }}</a>
+  <a href="/community/{{communityData.slug}}">{{ communityData.name }}</a>
 </h3>
 
 <div class="community-tags">
