--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -31,8 +31,8 @@
       <button type="button" class="button grey-button" id="postLinkButton"><i class="fas fa-link"></i></button>
       <button type="button" class="button grey-button" id="postImageButton"><i class="fas fa-image"></i></button>
       <button type="button" class="button grey-button" id="emojiWindowButton"><i class="far fa-smile"></i></button>
-      <button type="button" class="button grey-button" id="postContentWarningsButton"><i class="fas fa-info-circle"></i></button>
-      <button type="submit" style="margin-left: 1rem;" class="button" id="postSubmit" data-loading-text="<i class='fas fa-spinner fa-spin'></i> Uploading">Send <i class="fas fa-chevron-right"></i></button>
+      <button type="button" class="button grey-button" style="margin-right: 1rem;" id="postContentWarningsButton"><i class="fas fa-info-circle"></i></button>
+      <button type="submit" class="button" id="postSubmit" data-loading-text="<i class='fas fa-spinner fa-spin'></i> Uploading">Send <i class="fas fa-chevron-right"></i></button>
     </div>
   </div>
 </div>
