--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -1,6 +1,6 @@
 <section id="homeBody" class="row justify-content-center">
     <div class="col-lg-8">
-        <div class="container commentsList single-post-container" id="postsContainer">
+        <div class="single-post-container" id="postsContainer">
             {{#if canDisplay}}
                 {{> posts_v2 }}
             {{else}}
