--- a/views/tag.handlebars
+++ b/views/tag.handlebars
@@ -1,7 +1,7 @@
 <div id="homeBody" class="row justify-content-center">
   <div class="col-lg-8">
     <h3 class="page-header mx-2">#{{name}}</h3>
-		<div class="container commentsList" id="postsContainer">
+		<div id="postsContainer">
 		</div>
     {{> infiniteScrollLoadingSpinner}}
   </div>
