--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,20 +1,32 @@
-$text-black: #1a1717; // Text for light mode.
-$text-white: #ffffff; // Text color for dark mode.
+$text: #1a1717; // Text for light mode.
 
 $background-white: #fff;
 $background-grey: #f9f9fa; // Page background
 
-$lightest-grey: #f3f3f3; // Form input backgrounds
-$light-grey: #efefef;
+$lightest-grey: #f3f3f3; // Form input backgrounds, comment content box backgrounds
+$light-grey: #efefef; // Subtle dividers, comment content box borders
 $medium-grey: #cecece; // Post borders
-$darker-grey: #cbcbcb; // Currently only horizontal rules I think?
 $dark-grey: #aaa;
 $darkest-grey: #666; // Grey-colored text
 
-$light-blue: #338fc2; // Links
+$light-blue: #339fdb; // Links
+
+$light-yellow: #fcfaea; // Recent comment flash
+
+$bright-green: #46e146; // Recently active user markers
 
 $sweet-red: #ce1717; // The Best Red (TM). Hovers, buttons, etc.
 $dark-red: darken($sweet-red, 10%);
 $lightest-pink: #fffafc;
 $light-pink: lighten($sweet-red, 40%);
+$darker-pink: lighten($sweet-red, 30%); // 'Recently commented' notifications
 $dark-pink: lighten($sweet-red, 20%);
+
+$navbar-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+$dropdown-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+$post-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
+$button-shadow: 2px 2px 3px rgba(0,0,0,0.15);
+$button-shadow-hover: 1px 1px 1px rgba(0,0,0,0.2);
+
+$navigation-background: $background-white;
+$element-background: $background-white;
