--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -26,7 +26,7 @@
         {{/and}}
         {{#unless isMember}}
           {{#eq communityData.settings.visibility "public"}}
-            <div class="container commentsList" id="postsContainer"></div>
+            <div id="postsContainer"></div>
           {{else}}
             <div class="message text-center">
               This community's posts are only visible to its members.
@@ -34,7 +34,7 @@
           {{/eq}}
         {{else}}
           {{#if communityData.welcomeMessageParsed}}
-            <div class="container commentsList" id="welcome-message-container">
+            <div id="welcome-message-container">
               {{{ communityData.welcomeMessageParsed }}}
               <footer>
                   <div class="updated-by-text">
@@ -57,11 +57,11 @@
             </div>
           {{/if}}
           {{#gt votes.length 0 }}
-            <div class="container commentsList" id="votesContainer">
+            <div id="votesContainer">
               {{> votes}}
             </div>
           {{/gt}}
-          <div class="container commentsList" id="postsContainer"></div>
+          <div id="postsContainer"></div>
           {{> infiniteScrollLoadingSpinner}}
         {{/unless}}
       </div>
@@ -69,7 +69,7 @@
       <div id="requestsBody" class="community-container">
         <h3 class="page-header mx-2">Membership requests</h3>
 
-        <div class="container" id="resultsContainer">
+        <div class="compact-container" id="resultsContainer">
           {{#each communityData.membershipRequests}}
             <div class="content-box">
               <div class="row">
@@ -225,36 +225,30 @@
       </div>
       <div id="membersBody" class="community-container">
         <h3 class="page-header mx-2">Member manager</h3>
-        <div class="container" id="resultsContainer">
+        <div class="compact-container" id="resultsContainer">
           {{#each communityData.members}}
             {{#contains this.mutedCommunities ../communityData._id}}
             {{else}}
               <div class="content-box">
-                <div class="row">
-                  <div class="col commentContent">
-                    <div class="mb-2 d-lg-flex align-items-center">
-                      <div class="d-flex align-items-center">
-                        <img class="postAuthorImage mr-2" src="/images/{{#if this.imageEnabled}}{{this.image}}{{else}}cake.svg{{/if}}" />
-                        {{#if this.displayName}}
-                          <strong><a class="authorLink" href="/{{this.username}}">{{this.displayName}}</a></strong> &middot; <span class="text-muted">@{{this.username}}</span>
-                        {{else}}
-                          <strong><a class="authorLink" href="/{{this.username}}">@{{this.username}}</a></strong>
-                        {{/if}} {{#contains ../flaggedUsers this.email}}<i class="fas fa-exclamation-triangle text-danger"></i>{{/contains}}
-                      </div>
-                      <div class="ml-auto mt-3 mt-lg-0">
+                  <div class="content-box-header">
+                      <img class="postAuthorImage mr-2" src="/images/{{#if this.imageEnabled}}{{this.image}}{{else}}cake.svg{{/if}}" />
+                      {{#if this.displayName}}
+                        <strong><a class="authorLink" href="/{{this.username}}">{{this.displayName}}</a></strong> &middot; <span class="text-muted">@{{this.username}}</span>
+                      {{else}}
+                        <strong><a class="authorLink" href="/{{this.username}}">@{{this.username}}</a></strong>
+                      {{/if}} {{#contains ../flaggedUsers this.email}}<i class="fas fa-exclamation-triangle text-danger"></i>{{/contains}}
+                  </div>
+                  <div class="content-box-actions">
                         <button type="button" class="button community-action-button muteUser" data-user-id="{{this._id}}"><i class="fas fa-comment-slash"></i> Mute</button>
                         <button type="button" class="button community-action-button banUser" data-user-id="{{this._id}}"><i class="fas fa-ban"></i> Ban</button>
-                      </div>
-                    </div>
                   </div>
-                </div>
               </div>
             {{/contains}}
           {{/each}}
         </div>
         {{#if communityData.mutedMembers}}
           <h5 class="mt-4 px-2">Muted users</h5>
-          <div class="container" id="resultsContainer">
+          <div class="compact-container" id="resultsContainer">
             {{#each communityData.mutedMembers}}
               <div class="content-box">
                 <div class="row">
@@ -285,7 +279,7 @@
         {{/if}}
         {{#if communityData.bannedMembers}}
           <h5 class="mt-4 px-2">Banned users</h5>
-          <div class="container" id="resultsContainer">
+          <div class="compact-container" id="resultsContainer">
             {{#each communityData.bannedMembers}}
               <div class="content-box">
                 <div class="row">
