arbitrarily change infinite scroll code

--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -311,7 +311,7 @@
 
 {{#unless isBanned}}
 <script>
-  //called immediately below only atm
+  //called immediately below and in restartInfiniteScroll
   function startInfiniteScroll(){
     $('#postsContainer').infiniteScroll({
       path: function() {
