--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -86,7 +86,7 @@
 {{> filemessage }}
 
 <script>
-  //called immediately below only atm
+  //called immediately below and in restartInfiniteSCroll
   function startInfiniteScroll() {
       $('#postsContainer').infiniteScroll({
           path: function() {
