--- a/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
+++ b/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
@@ -12,8 +12,9 @@ function restartInfiniteScroll(timestamp){
     postsContainer.fadeOut(250,function(){
       postsContainer.html("");
       needPostsOlderThan = timestamp;
-      postsContainer.infiniteScroll('loadNextPage');
+      postsContainer.infiniteScroll("destroy");
       postsContainer[0].fadedOut = true;
+      startInfiniteScroll();
     });
   }
 
